--- a/UI/UnoMaterialSample/UnoMaterialSample.Shared/App.xaml
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Shared/App.xaml
@@ -7,9 +7,18 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->                
-            </ResourceDictionary.MergedDictionaries>
+				<!-- Load WinUI resources -->
+				<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+
+				<ToolkitResources xmlns="using:Uno.Toolkit.UI" />
+
+				<MaterialColors xmlns="using:Uno.Material"
+								OverrideSource="ms-appx:///Styles/Application/ColorPaletteOverride.xaml" />
+
+				<MaterialResources xmlns="using:Uno.Material" />
+
+				<MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
+			</ResourceDictionary.MergedDictionaries>
             <!-- Add resources here -->
         </ResourceDictionary>
     </Application.Resources>
