fix: use binding for ComboBox ItemsSource, avoids WinUI crash

--- a/UI/UnoMaterialSample/UnoMaterialSample.Shared/MainPage.xaml
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Shared/MainPage.xaml
@@ -16,7 +16,7 @@
 						   Style="{StaticResource MaterialBodyLarge}" />
 				<Button Content="button"
 						Style="{StaticResource MaterialFilledButtonStyle}" />
-                <ComboBox ItemsSource="asd" Style="{StaticResource MaterialComboBoxStyle}" />
+                <ComboBox ItemsSource="{x:Bind Items}" Style="{StaticResource MaterialComboBoxStyle}" />
                 <DatePicker Style="{StaticResource MaterialDatePickerStyle}" />
                 <TextBox Text="input" Style="{StaticResource MaterialFilledTextBoxStyle}" />
 
