--- a/UI/FoodDeliveryUI/FoodDeliveryUI/FoodDeliveryUI.Shared/MainPage.xaml
+++ b/UI/FoodDeliveryUI/FoodDeliveryUI/FoodDeliveryUI.Shared/MainPage.xaml
@@ -60,14 +60,14 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <!-- Horizontal Frame-->
-            <Frame Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" CornerRadius="15" BorderBrush="#1a204e" BorderThickness="1" HorizontalAlignment="Stretch"  Height="100" Margin="0,10">
+            <!-- Horizontal category-->
+            <Border Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" CornerRadius="15" BorderBrush="#1a204e" BorderThickness="0.8" HorizontalAlignment="Stretch"  Height="100" Margin="0,10">
                 <Grid Padding="10" RowDefinitions="*,*" ColumnDefinitions="*,Auto">
                     <TextBlock Grid.Row="0" Grid.Column="0" Text="See All Categories" FontWeight="Bold" Foreground="White" VerticalAlignment="Bottom" />
                     <TextBlock Grid.Row="1" Grid.Column="0" Text="100 Categories" Foreground="White" />
                     <Image Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Source="food3" Height="100" Width="100" VerticalAlignment="Bottom" HorizontalAlignment="Right" />
                 </Grid>
-            </Frame>
+            </Border>
         
             <!-- 3. Recommended-->
         
