chore: UnoEthereumBlockChain Sample - Update to net6

--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/MainPage.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/MainPage.xaml
@@ -24,7 +24,7 @@
                                                 TintColor="{ThemeResource SystemAccentColor}"
                                                 FallbackColor="{ThemeResource SystemAccentColor}"
                                                 BackgroundSource="Backdrop"
-                                                xmlns:media="using:Microsoft.UI.Xaml.Media" />
+                                                xmlns:media="using:Windows.UI.Xaml.Media" />
         </StackPanel.BorderBrush>
         <StackPanel.Background>
             <media:AcrylicBrush TintOpacity="0.7"
@@ -32,7 +32,7 @@
                                                 TintColor="{ThemeResource SystemAccentColor}"
                                                 FallbackColor="{ThemeResource SystemAccentColor}"
                                                 BackgroundSource="Backdrop"
-                             xmlns:media="using:Microsoft.UI.Xaml.Media" />
+                             xmlns:media="using:Windows.UI.Xaml.Media" />
         </StackPanel.Background>
         <Grid BorderBrush="{StaticResource SystemAccentColorDark1}"
               BorderThickness="1">
